--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body class="treehouse-og">
 
     <!-- overlay content -->
-    <div class="overlay">
+    <div class="overlay active-overlay">
         <div class="settings-container">
             <!-- side panel -->
             <div class="side-panel">
